[gd_scene load_steps=25 format=3 uid="uid://whbil7xojfmr"]

[ext_resource type="Script" path="res://rooms/scripts/Room.gd" id="1_02eyr"]
[ext_resource type="Texture2D" uid="uid://c6e07778mjfx1" path="res://assets/environment/lvl1wall1combat1.png" id="2_b31nw"]
[ext_resource type="ArrayOccluder3D" uid="uid://cdlkmfr0hpdrt" path="res://rooms/occluders/combatroom_3_wall1.occ" id="3_c670q"]
[ext_resource type="ArrayOccluder3D" uid="uid://kilqsbp8w4pm" path="res://rooms/occluders/combatroom_3_wall2.occ" id="4_ev5or"]
[ext_resource type="Texture2D" uid="uid://bey33kcn1gdsu" path="res://assets/environment/lvl1floorcombat1.png" id="4_mknv1"]
[ext_resource type="PackedScene" uid="uid://ci64337knkfuk" path="res://enemy/scenes/enemy_spawner.tscn" id="5_ejee6"]
[ext_resource type="Texture2D" uid="uid://dkoywbevsi8un" path="res://assets/environment/emptydoorwaystonewall.png" id="5_pv2gi"]
[ext_resource type="ArrayOccluder3D" uid="uid://clc8hcuo05xth" path="res://rooms/occluders/emptyroom_1_floor.occ" id="7_66twx"]
[ext_resource type="PackedScene" uid="uid://c7jumfechixnq" path="res://rooms/scenes/torch.tscn" id="7_j40db"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3yrjd"]
albedo_texture = ExtResource("2_b31nw")

[sub_resource type="PlaneMesh" id="PlaneMesh_pmdxk"]
material = SubResource("StandardMaterial3D_3yrjd")
size = Vector2(12.8, 7.2)
orientation = 0

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_hbqa0"]
points = PackedVector3Array(0, -3.6, -6.4, 0, 3.6, -6.4, 0, -3.6, 6.4, 0, 3.6, 6.4)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_fq7in"]
points = PackedVector3Array(0, -3.6, -6.4, 0, 3.6, -6.4, 0, -3.6, 6.4, 0, 3.6, 6.4)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wea65"]
albedo_color = Color(0.044074, 0.0427533, 0.0421858, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xjrnb"]
albedo_color = Color(0.044074, 0.0427533, 0.0421858, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_yq07t"]
albedo_texture = ExtResource("4_mknv1")
uv1_scale = Vector3(8, 8, 8)

[sub_resource type="PlaneMesh" id="PlaneMesh_ar2j6"]
material = SubResource("StandardMaterial3D_yq07t")
size = Vector2(12.8, 12.8)

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_4ups5"]

[sub_resource type="Gradient" id="Gradient_twbgh"]
colors = PackedColorArray(0, 0, 0, 1, 0.10748, 0.10748, 0.10748, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_hmg5w"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_hl4b5"]
color_ramp = SubResource("Gradient_twbgh")
noise = SubResource("FastNoiseLite_hmg5w")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cl0t8"]
albedo_texture = SubResource("NoiseTexture2D_hl4b5")

[sub_resource type="PlaneMesh" id="PlaneMesh_a4nd0"]
material = SubResource("StandardMaterial3D_cl0t8")
size = Vector2(12.8, 12.8)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_7fa5w"]
points = PackedVector3Array(-6.4, 0, -6.4, -6.4, 0, 6.4, 6.4, 0, -6.4, 6.4, 0, 6.4)

[node name="CombatRoom3" type="StaticBody3D"]
transform = Transform3D(-0.469, 0, 7.0817e-08, 0, 0.469, 0, -7.0817e-08, 0, -0.469, 0, 0, 0)
script = ExtResource("1_02eyr")

[node name="Wall1" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 3.6, 6.35)
visibility_range_end = 18.0
mesh = SubResource("PlaneMesh_pmdxk")

[node name="StaticBody3D" type="StaticBody3D" parent="Wall1"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Wall1/StaticBody3D"]
shape = SubResource("ConvexPolygonShape3D_hbqa0")

[node name="OccluderInstance3D" type="OccluderInstance3D" parent="Wall1"]
occluder = ExtResource("3_c670q")

[node name="Wall2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.35, 3.6, 0)
visibility_range_end = 18.0
mesh = SubResource("PlaneMesh_pmdxk")

[node name="StaticBody3D" type="StaticBody3D" parent="Wall2"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Wall2/StaticBody3D"]
shape = SubResource("ConvexPolygonShape3D_fq7in")

[node name="OccluderInstance3D" type="OccluderInstance3D" parent="Wall2"]
occluder = ExtResource("4_ev5or")

[node name="WallDoor3" type="CSGPolygon3D" parent="."]
transform = Transform3D(0.01, 8.74228e-10, -8.74228e-10, 8.74228e-10, -0.01, 0, -8.74228e-10, -7.64274e-17, -0.01, 0, 3.6, -6.4)
visibility_range_end = 18.0
use_collision = true
polygon = PackedVector2Array(-640, 360, -144, 360, -144, 70, -112, 32, -75, 10, -14, -1.978, 19.0259, -0.43631, 46.9548, 8.09595, 94.165, 30.7194, 130.463, 67.8524, 132, 360, 640, 360, 640, -360, -640, -360)
depth = 20.0
material = SubResource("StandardMaterial3D_wea65")

[node name="Sprite3D" type="Sprite3D" parent="WallDoor3"]
transform = Transform3D(-100, 8.74228e-06, 0, -8.74228e-06, -100, 0, 0, 0, 100, 0, 0, -20.1)
visibility_range_end = 20.0
flip_h = true
shaded = true
texture = ExtResource("5_pv2gi")

[node name="WallDoor4" type="CSGPolygon3D" parent="."]
transform = Transform3D(4.37114e-10, -3.82137e-17, 0.01, -8.74228e-10, -0.01, 0, 0.01, -8.74228e-10, -4.37114e-10, 6.4, 3.6, 0)
visibility_range_end = 18.0
use_collision = true
polygon = PackedVector2Array(-640, 360, -144, 360, -144, 70, -112, 32, -75, 10, -14, -1.978, 19.0259, -0.43631, 46.9548, 8.09595, 94.165, 30.7194, 130.463, 67.8524, 132, 360, 640, 360, 640, -360, -640, -360)
depth = 20.0
material = SubResource("StandardMaterial3D_xjrnb")

[node name="Sprite3D" type="Sprite3D" parent="WallDoor4"]
transform = Transform3D(-100, 8.74228e-06, 0, -8.74228e-06, -100, 0, 0, 0, 100, 0, 0, -20.1)
visibility_range_end = 20.0
flip_h = true
shaded = true
texture = ExtResource("5_pv2gi")

[node name="Floor" type="MeshInstance3D" parent="."]
visibility_range_end = 18.0
mesh = SubResource("PlaneMesh_ar2j6")

[node name="OccluderInstance3D" type="OccluderInstance3D" parent="Floor"]
occluder = ExtResource("7_66twx")

[node name="FloorCollision" type="CollisionShape3D" parent="."]
transform = Transform3D(0.64, 0, 0, 0, 0.64, 0, 0, 0, 0.64, 0, 0, 0)
shape = SubResource("WorldBoundaryShape3D_4ups5")

[node name="Ceiling" type="MeshInstance3D" parent="."]
transform = Transform3D(-1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0, 1, 0, 7.2, 0)
visibility_range_end = 18.0
mesh = SubResource("PlaneMesh_a4nd0")

[node name="StaticBody3D" type="StaticBody3D" parent="Ceiling"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ceiling/StaticBody3D"]
shape = SubResource("ConvexPolygonShape3D_7fa5w")

[node name="Lighting" type="Node3D" parent="."]

[node name="Torch" parent="Lighting" instance=ExtResource("7_j40db")]
transform = Transform3D(0.94147, 0.337095, 2.84217e-14, -0.337095, 0.94147, -1.3888e-15, -1.42109e-14, -3.55271e-15, 0.999999, -6.26363, 3.5186, -2.17563)

[node name="Torch2" parent="Lighting" instance=ExtResource("7_j40db")]
transform = Transform3D(0.94147, 0.337095, 5.68434e-14, -0.337095, 0.94147, -1.3888e-15, -2.84217e-14, -1.06581e-14, 0.999999, -6.26363, 3.5186, 2.34392)

[node name="Torch3" parent="Lighting" instance=ExtResource("7_j40db")]
transform = Transform3D(-5.18632e-08, 1.51777e-08, 0.999999, -0.337095, 0.94147, -1.3888e-15, -0.94147, -0.337095, -4.37114e-08, -2.182, 3.519, 6.264)

[node name="Torch4" parent="Lighting" instance=ExtResource("7_j40db")]
transform = Transform3D(-5.18632e-08, 1.51777e-08, 0.999999, -0.337095, 0.94147, -1.3888e-15, -0.94147, -0.337095, -4.37114e-08, 2.3539, 3.519, 6.264)

[node name="Torch5" parent="Lighting" instance=ExtResource("7_j40db")]
transform = Transform3D(-0.94147, -0.337095, -8.74227e-08, -0.337095, 0.94147, 0, 8.23059e-08, 2.94698e-08, -0.999999, 6.1, 3.519, -2.01613)

[node name="Torch6" parent="Lighting" instance=ExtResource("7_j40db")]
transform = Transform3D(-0.94147, -0.337095, -8.74227e-08, -0.337095, 0.94147, 0, 8.23059e-08, 2.94698e-08, -0.999999, 6.1, 3.519, 1.82865)

[node name="Torch7" parent="Lighting" instance=ExtResource("7_j40db")]
transform = Transform3D(-4.1153e-08, -1.47349e-08, -0.999999, -0.337095, 0.94147, 0, 0.94147, 0.337095, -4.37113e-08, 1.829, 3.519, -6.1)

[node name="Torch8" parent="Lighting" instance=ExtResource("7_j40db")]
transform = Transform3D(-4.1153e-08, -1.47349e-08, -0.999999, -0.337095, 0.94147, 0, 0.94147, 0.337095, -4.37113e-08, -2.02432, 3.519, -6.1)

[node name="DoorPositions" type="Node3D" parent="."]

[node name="L" type="Marker3D" parent="DoorPositions"]
transform = Transform3D(1, 0, -1.42109e-14, 0, 1, 0, 1.42109e-14, 0, 1, 6.4, 0, 0)

[node name="D" type="Marker3D" parent="DoorPositions"]
transform = Transform3D(1, 0, -1.42109e-14, 0, 1, 0, 1.42109e-14, 0, 1, 0, 0, -6.4)

[node name="EnemySpawner" parent="." instance=ExtResource("5_ejee6")]

[node name="ChestSpawns" type="Node3D" parent="."]

[node name="Marker3D" type="Marker3D" parent="ChestSpawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, 5)

[node name="Marker3D2" type="Marker3D" parent="ChestSpawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, -5)

[node name="Marker3D3" type="Marker3D" parent="ChestSpawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, 5)
